// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match custom icon 1`] = `
<DocumentFragment>
  <div
    class="nut-badge"
  >
    <div
      class="nut-badge-content nut-badge-icon"
      style="top: 0px; right: 0px;"
    >
      <svg
        aria-labelledby="Check"
        class="nut-icon nut-icon-Check "
        role="presentation"
        viewBox="0 0 49 48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M45.121 16.121 47.243 14 43 9.757l-2.121 2.122L19 33.757 7.121 21.88 5 19.757.757 24l2.122 2.121L14.757 38l2.122 2.121L19 42.243l2.121-2.122L23.243 38z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="nut-badge"
  >
    <div
      class="nut-badge-sup nut-badge-number nut-badge-one"
      style="top: 0px; right: 0px;"
    >
      8
    </div>
  </div>
</DocumentFragment>
`;
